--- a/holaMundo.html
+++ b/holaMundo.html
@@ -2,9 +2,7 @@
 <head>
 <meta charset="utf-8">
 <title>Untitled Document</title>
-<script language="javascript" type="text/javascript">
-	document.write("Hola Mundo");
-</script>
+<script src="./js/archivoExterno.js" charset="utf-8"></script>
 </head>
 
 <body>
